# dailyTask

./: README.md
daily-task/: README.md  package-lock.json  package.json
daily-task/src/: index.html  main.js  styles.css
daily-task/src-tauri/: Cargo.toml  tauri.conf.json
daily-task/src-tauri/capabilities/: default.json
daily-task/src-tauri/src/: lib.rs  main.rs
